Введение+заключение, замечания

--- a/temp.tex
+++ b/temp.tex
@@ -14,6 +14,7 @@
 %\usepackage[all]{xy}
 \usepackage[labelsep=period]{caption}
 \usepackage[ruled,vlined,linesnumbered,algosection,algo2e]{algorithm2e}
+\usepackage{paralist}
 % Перевод плагина algorithm2e
 \SetKwInput{KwData}{Исходные параметры}
 \SetKwInput{KwResult}{Результат}
@@ -50,6 +51,9 @@
 \newcounter{pe} % новый счётчик
 \newcommand*{\Nep}{\addtocounter{pe}{1}{\arabic{pe}$^{\circ}$.\;}}
 \newcommand*{\NepS}{\mbox{} \\ \Nep}
+
+% Список литературы - без [] -
+\makeatletter\renewcommand{\@biblabel}[1]{#1.\hfill}\makeatother
 
 \begin{document}
 
@@ -124,8 +128,14 @@
 \newpage
 \section{Введение}
 	\quad\,\,\,Нейрокомпьютерный интерфейс (англ. {\it brain-computer interface, mind-machine interface, brain–machine interface}, интерфейс «мозг-компьютер», зачастую используется сокращение {\it BCI}) ~--- специальный вид интерфейса, созданный для обмена информацией между мозгом и средствами вычислительной техники. Одной из задач, стоящих перед исследователями, работающими в данной области, является создание устройств, которые позволят людям с утраченными способностями организма полноценно взаимодействовать с окружающим миром.
-	\par В последние годы ведётся активная разработка различных практических приложений с использованием интерфейса «мозг-компьютер». Многие исследовательские группы по всему миру занимаются тематикой {\it BCI}, и в разработке многих направлений тематики имеются заметные успехи, однако до сих пор существует масса сложностей в практическом применении нейрокомпьютерного интерфейса.
-	\par TODO: В данной работе рассматриваются методы..., расписать по главам...
+	\par В последние годы ведётся активная разработка различных практических приложений с использованием интерфейса «мозг-компьютер». Многие исследовательские группы по всему миру занимаются тематикой {\it BCI}, и в разработке многих направлений тематики имеются заметные успехи, однако до сих пор существует масса сложностей в практическом применении нейрокомпьютерного интерфейса. Управление объектами реального мира может быть использовано в широком спектре областей, в частности, в медицине, развлекательной индустрии и пр.
+	\par Тем не менее, на сегодняшний день распознавание воображаемых движений является стандартной задачей, разработаны алгоритмы, практически безошибочно классифицирующие ментальные задания, однако разработанные системы сложно назвать приспособленными для использования с практической точки зрения.
+	\par Основной целью данной работы явлется построение модели нейрокомпьютерного интерфейса для управления динамическим объектом в некотором направлении с использованием общедоступного коммерческого устройства {\it Emotiv EPOC}. Кроме того, в данной дипломной работе проводится обзор существующих систем {\it BCI} и распространённых подходов к решению подобного рода задач.
+	\par В первой главе даётся формальная постановка решаемой задачи.
+	\par Далее описано используемое в данной работе оборудование, перечислены типы нейрофизиологических сигналов и объяснены причины, благодаря которым становится возможным решение поставленной задачи, а также обозначены имеющиеся на сегодняшний день проблемы при решении подобного рода задач.
+	\par Затем перечислены и описаны алгоритмы, наиболее часто применяющиеся при решении задач в области нейрокомпьютерных интерфейсов, а также представлены наиболее распространённые методы сравнения систем {\it BCI}.
+	\par После этого описывается процесс и методика получения данных в течение проводимых экспериментов, а также предлагаемый подход к распознаванию регистрируемых данных.
+	\par Далее представлены полученные результаты и проведено сравнение полученной точности с аналогичными исследованиями в данной области, а также приведены основные выводы, сделанные по результатам имевших место исследований.
 
 \clearpage 
 
@@ -181,7 +191,7 @@
 	инвазивность — непогружной.
 	\end{itemize}
 
-	\par Расположение сенсоров устройства в соответствии с системой размещения электродов <<10 -- 20\%>>\footnote{Система «10—20\%» — стандартная система размещения электродов на поверхности головы, которая рекомендована Международной федерацией электроэнцефалографии и клинической нейрофизиологии. Подробное описание данной системы может быть найдено в ~\ref{system10-20}} изображено на рис.~\ref{electrode_map}.
+	\par Расположение сенсоров устройства в соответствии с системой размещения электродов <<10 -- 20\%>>\footnote{Система «10—20\%» — стандартная система размещения электродов на поверхности головы, которая рекомендована Международной федерацией электроэнцефалографии и клинической нейрофизиологии. Подробное описание данной системы может быть найдено в~\cite{system10-20}.} изображено на рис.~\ref{electrode_map}.
 
 	\par Устройство {\it Emotiv EPOC} было использовано в силу своей простоты и доступности. Также достоинствами данного устройства являются портативность и небольшие размеры. В то же время оно обладает и рядом недостатков: низкая точность снимаемого сигнала и ненадёжная фиксация устройства на голове человека. В рамках настоящей работы будет предпринята попытка купировать недостатки устройства применяемыми методами обработки и классификации сигнала.
 
@@ -199,10 +209,10 @@
 	\par Вызванный потенциал — электрическая реакция мозга на внешний раздражитель или на выполнение некоторого ментального задания. Потенциалы данного вида имеют место в течение определённого промежутка времени после воздействия стимула.
 	\paragraph{Волны P300.}
 	\parВолна P300 -- положительное отклонение сигнала ЭЭГ, имеющее место ориентировочно через 300 мс после воздействия стимула с малой вероятностью появления, описывающего некоторое действие. Для порождения подобного рода волн испытуемый должен пронаблюдать последовательность двух типов стимулов. Первый тип стимулов (т.н. {\it целевые} стимулы) являются редкими в последовательности стимулов, в отличие от другого типа стимулов (т.н. {\it нецелевые} стимулы). Таким образом, во время появления целевого стимула может быть зафиксирована мозговая активность, содержащая волны P300. Данный принцип был применен в системе {\it BCI}, разработанной в исследовании \cite{Farwell_Donchin}. В данном исследовании было описано устройство для набора текста. На экране изображалась таблица доступных для набора символов, строки и столбцы которой выделялись в случайном порядке, в качестве целевого стимула выступало выделение столбца/строки с желаемым на данный момент символом, в качестве нецелевых стимулов -- выделение остальных столбцов/строк.
-	\paragraph{Steady-State Visual Evoked Potentials (SSVEPs).}
-	\par SSVEPs -- осцилляции, имеющие место в данных, полученных при помощи сенсоров, расположенных на затылке. Данные изменения могут быть результатом однородного процесса, повторяющегося с малой частотой. Подобного рода стимуляция порождает колебания той же частоты в регистрируемых сигналах головного мозга. В исследованиях по тематике нейрокомпьютерных интерфейсов потенциалы этого типа используются при одновременной демонстрации стимулов с разной частотой. Таким образом, пользователь путём концентрации на конкретном стимуле имеет возможность выбора действия, соответствующего данному стимулу.\\
-	\paragraph{Motor-Related Potentials (MRPs).}
-	\par MRPs -- продолжительные отрицательные потенциалы, связанные с ожиданием или ментальным представлением выполняемого движения или действия, имеют место в сенсомоторной части скальпа в начале выполнения движения или в процессе ментального представления движения.
+	\paragraph{Визуальные вызванные потенциалы.}
+	\par Визуальные вызванные потенциалы (англ. {\it Steady-State Visual Evoked Potentials}, {\it SSVEPs}) -- осцилляции, имеющие место в данных, полученных при помощи сенсоров, расположенных на затылке. Данные изменения могут быть результатом однородного процесса, повторяющегося с малой частотой. Подобного рода стимуляция порождает колебания той же частоты в регистрируемых сигналах головного мозга. В исследованиях по тематике нейрокомпьютерных интерфейсов потенциалы этого типа используются при одновременной демонстрации стимулов с разной частотой. Таким образом, пользователь путём концентрации на конкретном стимуле имеет возможность выбора действия, соответствующего данному стимулу.\\
+	\paragraph{Моторные вызванные потенциалы.}
+	\par Моторные вызванные потенциалы (англ. {\it Motor-Related Potentials}, {\it MRPs}) -- продолжительные отрицательные потенциалы, связанные с ожиданием или ментальным представлением выполняемого движения или действия, имеют место в сенсомоторной части скальпа в начале выполнения движения или в процессе ментального представления движения.
 	\\ \NepS {\bf Частотная мозговая активность}
 	\par В электроэнцефалограмме здорового человека выделяют несколько характерных составляющих электрических колебаний, называемых ритмами, различающихся частотным диапазоном, а также амплитудой, формой волны и другими характеристиками. Считается, что каждый ритм соответствует некоторому определённому состоянию мозга и связан с определёнными церебральными механизмами, а потому выделение ритмов, представляющих интерес, исходя из априорных знаний, может быть использовано для декодирования намерений пользователя.
 
@@ -231,6 +241,7 @@ $\gamma$-ритм &  30+ \\ \hline
 	\setcounter{pe}{0}
 	\NepS {\bf Вызванные потенциалы и волны P300}
 	\par Волны P300 были открыты в исследовании \cite{P300_first} в 1965 году. С тех пор имело место множество исследований по изучению природы этих колебаний путём изменения различных характеристик проводимых экспериментов, таких как способ демонстрации стимула, пол, возраст испытуемых, наличие заболеваний  и пр.
+	\par Существуют исследования, описывающие подходы к управлению динамическим объектом при помощи моторных и визуальных вызванных потенциалов, однако в рамках данной работы в качестве объектов для принятия решения будут выступать волны P300, поскольку используемое оборудование не покрывает участок скальпа, отвечающий за моторные вызванные потенциалы, а визуальные вызванные потенциалы были сочтены не соответствующими поставленной задаче с практической точки зрения.
 	\par Различные парадигмы могут быть использованы для выявления волн P300. В качестве стимулов могут быть использованы слуховые, визуальные, тактильные, обонятельные, вкусовые стимулы. Тем не менее, чаще всего используются визуальные и слуховые стимулы, а также их сочетания, поскольку данные типы являются лучшим выбором с практической точки зрения. В основном в большинстве исследований применяются две парадигмы: оригинальная (англ. {\it oddball paradigm}) и трёхстимульная (англ. {\it three-stimulus paradigm}).
 	\par Оригинальная парадигма подразумевает использование двух типов стимулов (целевого и нецелевого), демонстрируемых в произвольном порядке, причём демонстрация целевого стимула является гораздо более редким событием по сравнению с демонстрацией нецелевого стимула. Испытуемымому же необходимо концентрироваться исключительно на целевом стимуле и игнорировать появление нецелевых стимулов.
 	\par Трёхстимульная парадигма является модификацией оригинальной парадигмы. В~данном случае помимо описанных типов стимулов также присутствует т.н. {\it отвлекающий} стимул, редко появляющийся в последовательности целевых и нецелевых стимулов. Испытуемые не информируются о наличии подобного рода стимула в процессе инструктажа.
@@ -262,7 +273,12 @@ $\gamma$-ритм &  30+ \\ \hline
 
 \newpage
 \section{Методы обработки данных ЭЭГ}
-	\par После получения данных при помощи электроэнцефалографа необходимо применение алгоритма, позволяющего определить желаемое для пользователя действие. Входными данными для этого алгоритма являются сигналы ЭЭГ, регистрируемые в процессе демонстрации стимулов. В большинстве существующих на текущий момент исследований по данной тематике задача классификации сигналов разбивается на три большие подзадачи: предобработка сигнала (в целях удаления шумовых компонент), формирование признакового пространства и классификация объектов в построенном признаковом пространстве. Необходимо отметить, что наибольшее влияние на итоговое качество классификации оказывает влияние то, насколько успешно была решена задача формирования признакового пространства. Общая схема работы нейрокомпьютерных интерфейсов представлена на рис.~\ref{bci}.
+	\par После получения данных при помощи электроэнцефалографа необходимо применение алгоритма, позволяющего определить желаемое для пользователя действие. Входными данными для этого алгоритма являются сигналы ЭЭГ, регистрируемые в процессе демонстрации стимулов. В большинстве существующих на текущий момент исследований по данной тематике задача классификации сигналов разбивается на три большие подзадачи:
+\begin{inparaenum}[(1)]
+\item предобработка сигнала (в целях удаления шумовых компонент);
+\item формирование признакового пространства и 
+\item классификация объектов в построенном признаковом пространстве.
+\end{inparaenum} Необходимо отметить, что наибольшее влияние на итоговое качество классификации оказывает влияние то, насколько успешно была решена задача формирования признакового пространства. Общая схема работы нейрокомпьютерных интерфейсов представлена на рис.~\ref{bci}.
 
 	\begin{figure}[h!]
 	\center{\includegraphics[width=0.9\textwidth]{bci.png}}
@@ -277,13 +293,13 @@ $\gamma$-ритм &  30+ \\ \hline
 	\par {\it Постоянное амплитудное смещение} (англ. {\it direct current offset}, {\it DC offset}, постоянное смещение потока) ~--- отклонение волновой формы относительно оси нулевого уровня сигнала. Амплитудное смещение, наблюдаемое в электроэнцефалограмме, может быть разложено на две основные составляющие: постоянное смещение, возникающее из-за технических особенностей передачи данных, и  смещение, возникающее из-за взаимодействия электрической цепи с потенциалом тела.\\
 	\NepS {\bf Полосовая фильтрация}
 	\par Как было упомянуто выше, в электроэнцефалограмме здорового человека выделяют несколько характерных составляющих электрических колебаний, называемых ритмами, различающихся частотным диапазоном. С целью выявления компонент, отвечающих соответствующим ритмам, применяются методы фильтрации в заданном диапазоне частот. Диапазон частот выбирается, исходя из априорной информации о ритмах.
-	\par {\it Фильтрами нижних частот} называется тип фильтров, эффективно пропускающих частотный спектр сигнала ниже некоторой частоты (т.н. {\it частоты среза}) и уменьшающий (подавляющий) частоты сигнала выше этой частоты. Степень подавления каждой частоты зависит от вида фильтра. {\it Фильтр верхних частот}, напротив, пропускает частоты выше частоты среза и подавляет низкие частоты.\\
-	\NepS {\bf Windsorization}
-	\par Одним из эффективных методов снижения влияния артефактов, имеющих место в данных ЭЭГ, может применяться windsorization данных для каждого сенсора. Для каждого электрода вычисляются значения перцентилей среза (см. рис. ~\ref{windsorization}), затем значения, лежащие ниже или выше перцентилей среза замещаются соответствующими значениями.
+	\par {\it Фильтрами нижних частот} (англ. {\it low-pass filter, LPF}) называется тип фильтров, эффективно пропускающих частотный спектр сигнала ниже некоторой частоты (т.н. {\it частоты среза}) и уменьшающий (подавляющий) частоты сигнала выше этой частоты. Степень подавления каждой частоты зависит от вида фильтра. {\it Фильтр верхних частот} (англ. {\it high-pass filter, HPF}), напротив, пропускает частоты выше частоты среза и подавляет низкие частоты.\\
+	\NepS {\bf Робастное преобразование}
+	\par Одним из эффективных методов снижения влияния артефактов, имеющих место в данных ЭЭГ, может применяться робастное преобразование данных для каждого сенсора. Для каждого электрода вычисляются значения перцентилей среза (см. рис.~\ref{windsorization}), затем значения, лежащие ниже или выше перцентилей среза, замещаются соответствующими значениями.
 
 	\begin{figure}[h!]
 	\center{\includegraphics[width=0.9\textwidth]{windsorization.png}}
-		\caption{Data windsorization.}
+		\caption{Прнцип работы робастного преобразования данных.}
 	\label{windsorization}
 	\end{figure}
 
@@ -320,15 +336,15 @@ $$X^TX \alpha = \lambda \alpha,$$
 	\par Пусть имеется сигнал $s = [s_1, \dots, s_T].$ Для описания формы сигнала могут быть вычислены морфологические признаки, которые могут быть использованы отдельно или совместно с другими признаками. Некоторые из них перечислены ниже.
 	\begin{itemize}
 	\item 
-	{\bf Амплитуда} -- максимальное значение сигнала: $\displaystyle s^* = \max_{t = 1, \dots, T} {s_t}$.
+	{\bf Амплитуда} -- максимальное значение сигнала: $\displaystyle s_{max} = \max_{t = 1, \dots, T} {s_t}$.
 	\item
-	{\bf Латентность} -- момент регистрации максимального значения сигнала для вызванных потенциалов: $\displaystyle t^* = \arg \max_{t=1, \dots, T} \{ s_t \}$, где $s$ регистрируется в течение фиксированного промежутка после выделения стимула.
+	{\bf Латентность} -- момент регистрации максимального значения сигнала для вызванных потенциалов: $\displaystyle t_{max} = \arg \max_{t=1, \dots, T} \{ s_t \}$, где $s$ регистрируется в течение фиксированного промежутка после выделения стимула.
 	\item
-	{\bf Отношение латентность/амплитуда}: $\displaystyle LAR = \frac{t^*}{s^*}$.
+	{\bf Отношение латентность/амплитуда}: $\displaystyle LAR = \frac{t_{max}}{s_{max}}$.
 	\item
-	{\bf Абсолютная амплитуда}: $\displaystyle AAMP = \left| s^* \right|$.
+	{\bf Абсолютная амплитуда}: $\displaystyle AAMP = \left| s_{max} \right|$.
 	\item
-	{\bf Абсолютное отношение латентность/амплитуда}: $\displaystyle ALAR = \left| \frac{t^*}{s^*} \right|$.
+	{\bf Абсолютное отношение латентность/амплитуда}: $\displaystyle ALAR = \left| \frac{t_{max}}{s_{max}} \right|$.
 	\item
 	{\bf Положительная область} -- сумма положительных значений сигнала: \\ $\displaystyle PAR~=~\sum_{t = 1} ^ T \frac{s_t + |s_t|}{2}.$
 	\item
@@ -336,7 +352,7 @@ $$X^TX \alpha = \lambda \alpha,$$
 	\item
 	{\bf Межпиковая разность}: $\displaystyle PP = s_{max} - s_{min},$ где $s_{max}$ и $s_{min}$ - максимальное и минимальное значения сигнала соответственно.
 	\item
-	{\bf Межпиковое расстояние}: $\displaystyle PPT = t_{smax} - t_{smin}.$
+	{\bf Межпиковое расстояние}: $\displaystyle PPT = t_{max} - t_{min}.$
 	\end{itemize}
 
 
@@ -369,7 +385,7 @@ $$x_n = \sum_{k=0}^{\frac{N}{2}} C_k \cos{\frac{2 \pi k (n + \phi_k)}{N}}\, = \,
 	\par Метод также может быть обобщён для применения к задачам с количеством классов, большим двух, путём разбиения исходной задачи на бинарные подзадачи с использованием схем <<один против одного>> или <<один против всех>>.
 
 	\subsection{Классификация}
-	\par После построения искомого признакового пространства алгоритм, используемый для классификации преобразованных объектов, играет не столь значительную роль. После предобработки и преобразования исходных данных проводится обучение классификатора, после чего обученный классификатор может принимать решение о наличии либо отсутствии волн P300 и, как следствие, о необходимости выполнять действие, предписанное стимулом. Наиболее часто в исследованиях по тематике {\it BCI} используются следующие типы классификаторов.
+	\par После построения искомого признакового пространства алгоритм, используемый для классификации преобразованных объектов, играет не столь значительную роль. После предобработки и преобразования исходных данных проводится обучение классификатора, после чего обученный классификатор может принимать решение о наличии либо отсутствии волн P300 и, как следствие, о необходимости выполнять действие, предписанное стимулом. Наиболее часто в исследованиях по тематике {\it BCI} используются описанные ниже типы классификаторов. Более подробное описание данных алгоритмов может быть найдено в~\cite{Vorontsov}.
 
 	\setcounter{pe}{0}
 	\NepS {\bf Байесовский классификатор}
@@ -431,9 +447,9 @@ $$BR = \frac{d}{n_1 + n_2} \times \frac{60}{ISI} \times \log_2 (N_{st}),$$
 	\par Как правило, в исследованиях на основе визуальных стимулов используется следующая схема получения данных:
 	\begin{itemize}
 	\item
-	Испытуемому в течение $t_1$ секунд демонстрируется визуальный стимул либо ментальное задание, которое предстоит выполнить. 
+	Испытуемому в течение $t_1$ секунд демонстрируется визуальный стимул либо ментальное задание, которое предстоит выполнить. Значение $t_1$ варьируется для различных типов исследований.
 	\item
-	В течение $t_2$ секунд испытуемый сосредотачивает внимание на визуальном стимуле либо выполняет указанное ментальное задание. Кроме того, в процессе этого действия происходит запись данных.
+	В течение $t_2$ секунд испытуемый сосредотачивает внимание на визуальном стимуле либо выполняет указанное ментальное задание. Кроме того, в процессе этого действия происходит запись данных. Значение $t_2$ варьируется для различных типов исследований.
 	\item
 	Визуальный стимул перестаёт демонстрироваться испытуемому, проводится краткая пауза для восстановления расслабленного состояния и подготовки к следующей итерации.
 	\end{itemize}
@@ -500,11 +516,11 @@ $$BR = \frac{d}{n_1 + n_2} \times \frac{60}{ISI} \times \log_2 (N_{st}),$$
 	\par После этого из полученных данных были выделены отдельные пробы продолжительностью 1500 мс. Начало пробы совпадало с началом выделения визуального стимула на экране компьютера, конец пробы приходился на момент через 1500 мс после начала выделения стимула (250 мс выделения визуального стимула и 1250 мс ожидания). Таким образом, для дальнейшей обработки и определения наличия волн P300 имеются данные, представленные в виде потенциалов, зарегистрированных для 192 моментов времени для каждого из сенсоров после выделения каждого из визуальных стимулов.
 	\paragraph{Фильтрация.}
 	\par Были предприняты попытки использовать несколько типов цифровых фильтров для обработки полученных сигналов: полосно-пропускной фильтр Чебышева 4ого порядка 1ого типа, фильтр Баттерворта и эллиптический полосно-пропускной фильтр с полосой пропускания 0.16--43 Гц.
-	\paragraph{Мtтод независимых компонент.}
+	\paragraph{Мeтод независимых компонент.}
 	\par К данным ЭЭГ, подвергнутым фильтрации, был применен метод независимых компонент для извлечения независимых источников. Была использована реализация алгоритма {\it FastICA} для {\tt MATLAB}. Описание алгоритма было представлено в предыдущих разделах. Более подробно алгоритм описан в \cite{FastICA}.
 
 	\subsection{Отбор признаков}
-	\par В исследовании \cite{Piccione} был использован fuzzy control method для отбора признаков, наиболее похожих на волны P300, для дальнейшей классификации. Другие исследования используют неавтоматический метод отбора признаков. Поскольку в данной работе используется коммерческое {\it BCI}-устройство с высоким уровнем шума в получаемых данных, нет возможности ожидать наличия среди полученных независимых компонент наличие близкой к P300-волне, наподобие полученных в исследовании \cite{Piccione}. Кроме того, данный метод существенно увеличивает время обработки данных. В исследовании \cite{James} показано, что результирующие компоненты ICA, отличные от P300-волн, практически неотличимы для целевых и нецелевых проб, поскольку они являются компонентами одних и тех же источников артефактов в одинаковых условиях. Для первого подхода к компонентам, полученным при помощи метода независимых компонент, применяется дискретное вейвлет-преобразование 3-го порядка, где коэффициенты аппроксимации представляют собой  энергию сигнала в полосе P300-волн, включающих энергию сигнала в дельта-, тета- и части альфа-ритмов, как показано в некоторых исследованиях. Для второго подхода преобразование применяется непосредственно к данным ЭЭГ. Для обоих подходов был использован вейвлет Добеши, поскольку он широко распространён в литературе для подобных целей. Результирующие коэффициенты аппроксимации были использованы в качестве признаков и были конкатенированы в единые вектора. Результирующая размерность признакового представления объектов равнялась $N_e \times N_f,$ где $N_e$ -- количество сенсоров, $N_f$ -- количество признаков в одной пробе. Кроме аппроксимирующих коэффициентов, были также использованы описанные в предыдущих разделах морфологические признаки. С учётом продолжительности проб и типа применяемого дискретного вейвлет-преобразования, получаем $N_f = 18 + 9 = 27.$ С учётом выбора одного из указанных подмножествв электродов получается $N_e = 8$ или $N_e = 10.$
+	\par В исследовании \cite{Piccione} был применен метод с использованием нечетких регуляторов (англ. {\it fuzzy control method}) для отбора признаков, наиболее похожих на волны P300, для дальнейшей классификации. Другие исследования используют неавтоматический метод отбора признаков. Поскольку в данной работе используется коммерческое {\it BCI}-устройство с высоким уровнем шума в получаемых данных, нет возможности ожидать наличия среди полученных независимых компонент наличие близкой к P300-волне, наподобие полученных в исследовании \cite{Piccione}. Кроме того, данный метод существенно увеличивает время обработки данных. В исследовании \cite{James} показано, что результирующие компоненты ICA, отличные от P300-волн, практически неотличимы для целевых и нецелевых проб, поскольку они являются компонентами одних и тех же источников артефактов в одинаковых условиях. Для первого подхода к компонентам, полученным при помощи метода независимых компонент, применяется дискретное вейвлет-преобразование 3-го порядка, где коэффициенты аппроксимации представляют собой  энергию сигнала в полосе P300-волн, включающих энергию сигнала в дельта-, тета- и части альфа-ритмов, как показано в некоторых исследованиях. Для второго подхода преобразование применяется непосредственно к данным ЭЭГ. Для обоих подходов был использован вейвлет Добеши, поскольку он широко распространён в литературе для подобных целей. Результирующие коэффициенты аппроксимации были использованы в качестве признаков и были конкатенированы в единые вектора. Результирующая размерность признакового представления объектов равнялась $N_e \times N_f,$ где $N_e$ -- количество сенсоров, $N_f$ -- количество признаков в одной пробе. Кроме аппроксимирующих коэффициентов, были также использованы описанные в предыдущих разделах морфологические признаки. С учётом продолжительности проб и типа применяемого дискретного вейвлет-преобразования, получаем $N_f = 18 + 9 = 27.$ С учётом выбора одного из указанных подмножествв электродов получается $N_e = 8$ или $N_e = 10.$
 	\par Далее отобранные признаки подвергались стандартизации, т.е. преобразованию, обеспечивающему нулевое среднее значение каждого признака и единичную матрицу ковариаций. Нормировочные константы вычисляются для каждого сенсора с учётом всех имеющихся в обучающей выборке данных, а затем также применялись к отложенной выборке. Отметим, что стандартизации отдельных проб без учёта остальной информации может уничтожить важную информацию об амплитуде имеющихся волн P300, в связи с этим необходимо проведение данной процедуры для всех зарегистрированных проб.
 
 \subsection{Классификация}
@@ -584,7 +600,7 @@ $$BR = \frac{d}{n_1 + n_2} \times \frac{60}{ISI} \times \log_2 (N_{st}),$$
 
 \subsection{Обсуждение и~выводы}
 	\par Полученные результаты для системы с инверсированным положением устройства демонстрируют, что точность классификации предложенного подхода сравнима с существующими на данный момент исследованиями в данной области, использующими схожее оборудование и условия проведения экспериментов. В частности, в \cite{rhyme} была достигнута точность 60\% выявления волн P300 при использовании устройства {\it Emotiv EPOC.}
-	\par Для испытуемых значение чувствительности оказалось довольно низким. Таким образом, система распознавала приблизительную предполагаемую траекторию движения курсора, однако для распознавания непосредственно команды необходимо было ожидание в течение нескольких проб, как следствие, наблюдалось падение производительности системы. Тем не менее, приемлемое значение точности может быть достигнуто при низком значении специфичности. Высокое же значение данное характеристики дезориентирует пользователя и может привести к невозможности дальнейшего управления курсором, поскольку траектория в таких случаях радикально отличается от предполагаемой пользователем. Отметим, что полученные значения специфичности сравнимы в результатами, полученными в \cite{Kanoh}.
+	\par Для испытуемых значение чувствительности оказалось довольно низким. Таким образом, система распознавала приблизительную предполагаемую траекторию движения курсора, однако для распознавания непосредственно команды необходимо было ожидание в течение нескольких проб, как следствие, наблюдалось падение производительности системы. Тем не менее, приемлемое значение точности может быть достигнуто при низком значении специфичности. Высокое же значение данное характеристики дезориентирует пользователя и может привести к невозможности дальнейшего управления курсором, поскольку траектория в таких случаях радикально отличается от предполагаемой пользователем. Отметим, что полученные значения специфичности сравнимы в результатами, полученными в \cite{Kanoh}. Предложенный в данной работе метод позволяет добиться лучших результатов по сравнению с подходом, предложенным в исследовании~\cite{pseudo}, при использовании {\it Emotiv EPOC}.
 	\par Кроме того, в результате экспериментов было отмечено, что использование стрелок в качестве визуальных стимулов ведёт к лучшим результатам, нежели кнопок с текстом.
 	\par Наилучший результат был получен при применении подхода, использующего отдельные классификаторы для различных типов стимулов. Тем не менее, полученные результаты не свидетельствуют о том, что использование подхода отдельных классификаторов гарантирует лучший результат, нежели использование подхода с единым классификатором.
 	\par Низкое значение точности полученной системы может быть результатом различных причин, среди которых следующие:
@@ -597,25 +613,17 @@ $$BR = \frac{d}{n_1 + n_2} \times \frac{60}{ISI} \times \log_2 (N_{st}),$$
 
 \newpage
 \section{Заключение}
-TODO: Написать заключение
-%\begin{itemize}
-%\item 
-%    Предложен новый подход к\dots
-%\item 
-%    Разработан новый метод\dots, позволяющий\dots
-%\item 
-%    Доказан ряд теорем, подтверждающих (опровергающих), что\dots
-%\item 
-%    Проведены вычислительные эксперименты\dots,
-%    которые подтвердили / опровергли / привели к~новым постановкам задач.
-%\end{itemize}
-    
-%Цель данного раздела: доказать квалификацию автора. 
-%Даже беглого взгляда на заключение должно быть достаточно, чтобы стало ясно: 
-%автору удалось решить актуальную, трудную, ранее не~решённую задачу, 
-%предложенные автором решения обоснованы и~проверены.
+	\par В рамках настоящей дипломной работы были изучены существующие подходы к решению задач построения нейрокомпьютерных интерфейсов. Был предложен метод построения нейрокомпьютерного интерфейса для управления динамическим объектом, а также было проведено сравнение с аналогичными исследованиями последних лет.
+	\par В ходе данной работы были получены следующие основные результаты:
+	\begin{itemize}\itemsep0pt
+		\item
+		Предложен метод классификации сигналов головного мозга в задаче управления курсором на экране компьютера с использованием общедоступного устройства {\it Emotiv EPOC}.
+		\item
+		Предложенный метод был протестирован при помощи программной реализации в системе MATLAB.
+		\item
+		Результаты работы описанного подхода не уступают существующим на сегодняшний день методам решения данной задачи с использованием схожего оборудования. Сделанные выводы изложены в работе.
+	\end{itemize}\par
 
-%Иногда в~Заключении приводится список направлений дальнейших исследований.
 
 \newpage
 
@@ -630,54 +638,43 @@ TODO: Написать заключение
 \begin{thebibliography}{1}
 
 \bibitem{Farwell_Donchin}
-{\it Farwell L.A. and Donchin E.}
-\newblock "Talking off the top of your head: toward a mental prothesis utilizing event-related brain potentials"
-\newblock Electroencephalography \& Clinical Neurophysiology, (vol. 70, №6, pp. 510-523), 1988.
+{\it Farwell~L.A., Donchin~E.} Talking off the top of your head: toward a mental prothesis utilizing event-related brain potentials // Electroencephalography \& Clinical Neurophysiology, Vol. 70, Issue 6, pp. 510-523, 1988.
 
 \bibitem{P300_first}
-{\it Sutton S., Braren M., Zubin J., John E.R.}
-\newblock <<Evoked-potential correlates of stimulus uncertainty>>,
-\newblock Science. (vol. 150, №700, pp. 1187-1188), 1965.
+{\it Sutton~S., Braren~M., Zubin~J., John~E.R.} Evoked-potential correlates of stimulus uncertainty // Science, Vol. 150,  Issue 700, pp. 1187-1188, 1965.
 
 \bibitem{Cachenoura}
-{\it Amar Kachenoura, Laurent Albera, Lotfi Senhadji, Pierre Comon}
-\newblock <<ICA: A Potential Tool for BCI Systems>>,
-\newblock Signal Processing Magazine, IEEE (vol. 25, №1, pp.57-68), 2008.
+{\it Kachenoura~A., Albera~L., Senhadji~L., Comon~P.} ICA: A Potential Tool for BCI Systems // Signal Processing Magazine, IEEE, Vol. 25, Issue 1, pp. 57-68, 2008.
 
 \bibitem{ensemble}
-{\it Rakotomamonjy, A. and Guigue, V.}
-\newblock <<BCI Competition III: Dataset II- Ensemble of SVMs for BCI P300 Speller>>,
-\newblock Biomedical Engineering, IEEE Transactions (vol. 55, №3, pp. 1147-1154), 2005.
+{\it Rakotomamonjy~A., Guigue~V.} BCI Competition III: Dataset II- Ensemble of SVMs for BCI P300 Speller // Biomedical Engineering, IEEE Transactions, Vol. 55, Issue 3, pp. 1147-1154, 2005.
 
 \bibitem{FastICA}
-The FastICA algorithm package for MATLAB.
-\newblock Laboratory of Information and Computer Science, Helsinki University of Technology,
-\newblock ({\it http://research.ics.aalto.fi/ica/fastica/}).
+\emph{The FastICA algorithm package for MATLAB}.
+[HTML] (http://research.ics.aalto.fi/ica/fastica/).
 
 \bibitem{Piccione}
-{\it Piccione F., Giorgi F., Tonin P., Priftis K., Giove S., Silvoni S., Palmas G., Beverina F.}
-\newblock  <<P300-based brain computer interface: reliability and performance in healthy and paralysed participants>>,
-\newblock Clin Neurophysio l(vol. 117, №3б pp. 531-537), 2006.
+{\it Piccione~F., Giorgi~F., Tonin~P., Priftis~K., Giove~S., Silvoni~S., Palmas~G., Beverina~F.} // P300-based brain computer interface: reliability and performance in healthy and paralysed participants, Clin Neurophysiol, Vol. 117, Issue 3, pp. 531-537, 2006.
 
 \bibitem{James}
-{\it S. Wang, C. J. James}
-\newblock <<Enhancing evoked responses for BCI through advanced ICA techniques>>,
-\newblock International Conference on Advances in Medical, Signal and Information Processing, pp. 1--4, 2006.
+{\it Wang~S., James~C.J.} Enhancing evoked responses for BCI through advanced ICA techniques // International Conference on Advances in Medical, Signal and Information Processing, pp. 1--4, 2006.
 
 \bibitem{rhyme}
-{\it Juan Manuel Ramírez-Cortes, Vicente Alarcon-Aquino, Gerardo Rosas-Cholula, Pilar Gomez-Gil, Jorge Escamilla-Ambrosio} 
-\newblock <<P-300 Rhythm Detection Using ANFIS Algorithm and Wavelet Feature Extraction in EEG Signals>>,
-\newblock Proceedings of the World Congress on Engineering and Computer Science (vol. 1,  pp. 963-968), 2010.
+{\it Ramírez-Cortes~J.M., Alarcon-Aquino~V., Rosas-Cholula~G., Gomez-Gil~P., Escamilla-Ambrosio~J.} P-300 Rhythm Detection Using ANFIS Algorithm and Wavelet Feature Extraction in EEG Signals // Proceedings of the World Congress on Engineering and Computer Science, Vol. 1,  pp. 963-968, 2010.
 
 \bibitem{Kanoh}
-{\it S. Kanoh, Member, IEEE, K. Miyamoto and T. Yoshinobu}
-\newblock <<A P300-based BCI System for Controlling Computer Cursor Movement>>,
-\newblock Conf Proc IEEE Eng Med Biol Soc., 2011.
+{\it Kanoh S., Miyamoto K., Yoshinobu T.} A P300-based BCI System for Controlling Computer Cursor Movement // Conf Proc IEEE Eng Med Biol Soc., 2011.
 
 \bibitem{system10-20}
-{\it H.H. Jasper.}
-\newblock The ten-twenty electrode system of the International Federation. 
-\newblock Electroencephalogr Clin Neurophysiol (vol. 10, pp. 371-375), 1958.
+{\it Jasper H.H.} The ten-twenty electrode system of the International Federation // Electroencephalogr Clin Neurophysiol, Vol. 10, pp. 371-375, 1958.
+
+\bibitem{Vorontsov}
+    {\it Воронцов К.В.} Математические методы обучения по прецедентам (теория обучения машин).
+   [HTML] (http://www.machinelearning.ru/wiki/images/6/6d/Voron-ML-1.pdf).
+
+\bibitem{pseudo}
+	{\it Khemri~N.A.} P300 Wave Detection Using a Commercial Non-invasive Eeg Sensor: Reliability and Performance in Control Applications // Graduate College of the Oklahoma State University, 2012.
+
 
 
 \end{thebibliography}
